// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`*************** Testing the single Trip info  component missing some information and Disabled button  *************** Should render the SingleTripInfo component correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <_default
    accommodation={
      Object {
        "data": Object {
          "data": Object {
            "cost": "$78",
            "createdAt": "2020-06-15",
            "description": null,
            "id": 1,
            "images": Array [
              Object {
                "details": "Back view of accommodation",
                "id": 2,
                "url": "https://res.cloudinary.com/dcna45id5/image/upload/v1586427877/samples/landscapes/nature-mountains.jpg",
              },
            ],
            "location": "Kigali",
            "name": null,
            "owner": "Robert",
            "rooms": Array [
              Object {},
            ],
            "services": Array [
              Object {
                "cost": null,
                "description": null,
                "id": 1,
                "name": null,
              },
            ],
            "status": "available",
            "updatedAt": "2020-06-15",
          },
          "message": "Accommodation retrieved successfully",
          "status": 200,
        },
      }
    }
    information={
      Object {
        "email": "firaduk@yahoo.com",
        "manager": "NDOLI Jack",
        "name": "User For Testing",
        "result": Object {
          "id": 2,
          "status": "accepted",
          "tripRequest": Array [
            Object {
              "accommodation_id": 1,
              "dateOfReturn": "2020-06-15",
              "dateOfTravel": "2020-07-15",
              "destination": "destination city",
              "origin": "origin city",
              "travelReason": "managerTest",
            },
          ],
          "trip_id": 2,
        },
      }
    }
  >
    <div
      className="tripInformation"
    >
      <div
        className="header"
      >
        <div
          className="backToTrips"
          onClick={[Function]}
        >
           
          <i
            className="material-icons"
          >
            arrow_back
          </i>
           Back to trips
        </div>
        <button
          className="btn waves-effect waves-light"
          disabled={true}
          onClick={[Function]}
        >
           EDIT TRIP REQUEST 
        </button>
      </div>
      <h5
        className="title"
      >
        Trip Number:
        2
      </h5>
      <div
        className="content"
      >
        <div
          className="infoRow"
        >
          <span>
            Name: 
          </span>
              
          <b>
            User For Testing
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Email: 
          </span>
              
          <b>
            firaduk@yahoo.com
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            From: 
          </span>
              
          <b>
            origin city
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            To:
          </span>
              
          <b>
            destination city
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Date of Travel:
          </span>
              
          <b>
            2020-07-15
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Date of return: 
          </span>
              
          <b>
            2020-06-15
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Manager: 
          </span>
              
          <b>
            NDOLI Jack
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Travel Reason: 
          </span>
              
          <b>
            managerTest
          </b>
        </div>
        <div
          className="accommodation"
        >
          <span
            className="infoRow"
          >
            Accomodation
          </span>
          <div
            className="accommodationRow"
          >
            <div
              className="accommodationImg"
            >
              <img
                alt="hotel picture"
                src="https://res.cloudinary.com/dcna45id5/image/upload/v1586427877/samples/landscapes/nature-mountains.jpg"
              />
            </div>
            <div
              className="accomodationDetails"
            >
              <div
                className="title"
              >
                <b>
                  Hotel Name
                </b>
              </div>
              <div
                className="serviceDetails"
              >
                <b>
                  serviceName
                </b>
                <span>
                  Cost: 
                  $0.0
                </span>
              </div>
              <div
                className="description"
              >
                Simple Description
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </_default>
</Provider>
`;

exports[`*************** Testing the single Trip info component With full information *************** Should render the SingleTripInfo component correctly 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <_default
    accommodation={
      Object {
        "data": Object {
          "data": Object {
            "cost": "$78",
            "createdAt": "2020-06-15",
            "description": "A cool Place",
            "id": 1,
            "images": Array [
              Object {
                "details": "Back view of accommodation",
                "id": 2,
                "url": "https://res.cloudinary.com/dcna45id5/image/upload/v1586427877/samples/landscapes/nature-mountains.jpg",
              },
            ],
            "location": "Kigali",
            "name": "Panter Hotel",
            "owner": "Robert",
            "rooms": Array [
              Object {},
            ],
            "services": Array [
              Object {
                "cost": "$54",
                "description": "Best Hotel Ever",
                "id": 1,
                "name": "service1",
              },
            ],
            "status": "available",
            "updatedAt": "2020-06-15",
          },
          "message": "Accommodation retrieved successfully",
          "status": 200,
        },
      }
    }
    information={
      Object {
        "email": "firaduk@yahoo.com",
        "manager": "NDOLI Jack",
        "name": "User For Testing",
        "result": Object {
          "id": 2,
          "status": "pending",
          "tripRequest": Array [
            Object {
              "accommodation_id": 1,
              "dateOfReturn": "2020-06-15",
              "dateOfTravel": "2020-07-15",
              "destination": "destination city",
              "origin": "origin city",
              "travelReason": "managerTest",
            },
          ],
          "trip_id": 2,
        },
      }
    }
  >
    <div
      className="tripInformation"
    >
      <div
        className="header"
      >
        <div
          className="backToTrips"
          onClick={[Function]}
        >
           
          <i
            className="material-icons"
          >
            arrow_back
          </i>
           Back to trips
        </div>
        <button
          className="btn waves-effect waves-light"
          disabled={false}
          onClick={[Function]}
        >
           EDIT TRIP REQUEST 
        </button>
      </div>
      <h5
        className="title"
      >
        Trip Number:
        2
      </h5>
      <div
        className="content"
      >
        <div
          className="infoRow"
        >
          <span>
            Name: 
          </span>
              
          <b>
            User For Testing
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Email: 
          </span>
              
          <b>
            firaduk@yahoo.com
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            From: 
          </span>
              
          <b>
            origin city
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            To:
          </span>
              
          <b>
            destination city
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Date of Travel:
          </span>
              
          <b>
            2020-07-15
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Date of return: 
          </span>
              
          <b>
            2020-06-15
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Manager: 
          </span>
              
          <b>
            NDOLI Jack
          </b>
        </div>
        <div
          className="infoRow"
        >
          <span>
            Travel Reason: 
          </span>
              
          <b>
            managerTest
          </b>
        </div>
        <div
          className="accommodation"
        >
          <span
            className="infoRow"
          >
            Accomodation
          </span>
          <div
            className="accommodationRow"
          >
            <div
              className="accommodationImg"
            >
              <img
                alt="hotel picture"
                src="https://res.cloudinary.com/dcna45id5/image/upload/v1586427877/samples/landscapes/nature-mountains.jpg"
              />
            </div>
            <div
              className="accomodationDetails"
            >
              <div
                className="title"
              >
                <b>
                  Panter Hotel
                </b>
              </div>
              <div
                className="serviceDetails"
              >
                <b>
                  service1
                </b>
                <span>
                  Cost: 
                  $54
                </span>
              </div>
              <div
                className="description"
              >
                Best Hotel Ever
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </_default>
</Provider>
`;
